// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jeden startující 1`] = `
<div>
  <table
    className="StartujiciProTyp-table table table-striped table-bordered table-condensed"
  >
    <tbody>
      <tr>
        <td
          className="StartujiciProTyp-dokonceno"
          onClick={[Function]}
        >
          7
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`třináct startujících 1`] = `
<div>
  <table
    className="StartujiciProTyp-table table table-striped table-bordered table-condensed"
  >
    <tbody>
      <tr>
        <td
          className="StartujiciProTyp-na-trase"
          onClick={undefined}
        >
          7
        </td>
        <td
          className="StartujiciProTyp-na-trase"
          onClick={undefined}
        >
          4
        </td>
        <td
          className="StartujiciProTyp-dokonceno"
          onClick={[Function]}
        >
          16
        </td>
        <td
          className="StartujiciProTyp-nedokonceno"
          onClick={undefined}
        >
          25
        </td>
        <td
          className="StartujiciProTyp-dokonceno"
          onClick={[Function]}
        >
          9
        </td>
        <td
          className="StartujiciProTyp-dokonceno"
          onClick={[Function]}
        >
          15
        </td>
        <td
          className="StartujiciProTyp-nedokonceno"
          onClick={undefined}
        >
          1
        </td>
        <td
          className="StartujiciProTyp-na-trase"
          onClick={undefined}
        >
          8
        </td>
        <td
          className="StartujiciProTyp-na-trase"
          onClick={undefined}
        >
          59
        </td>
        <td
          className="StartujiciProTyp-na-trase"
          onClick={undefined}
        >
          43
        </td>
      </tr>
      <tr>
        <td
          className="StartujiciProTyp-nedokonceno"
          onClick={undefined}
        >
          42
        </td>
        <td
          className="StartujiciProTyp-dokonceno"
          onClick={[Function]}
        >
          33
        </td>
        <td
          className="StartujiciProTyp-nedokonceno"
          onClick={undefined}
        >
          21
        </td>
        <td
          className="StartujiciProTyp-dokonceno"
          onClick={[Function]}
        >
          24
        </td>
        <td
          className="StartujiciProTyp-na-trase"
          onClick={undefined}
        >
          25
        </td>
        <td
          className="StartujiciProTyp-na-trase"
          onClick={undefined}
        >
          22
        </td>
        <td
          className="StartujiciProTyp-na-trase"
          onClick={undefined}
        >
          30
        </td>
        <td
          className="StartujiciProTyp-dokonceno"
          onClick={[Function]}
        >
          23
        </td>
        <td
          className="StartujiciProTyp-na-trase"
          onClick={undefined}
        >
          26
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`žádný startující 1`] = `
<div>
  <table
    className="StartujiciProTyp-table table table-striped table-bordered table-condensed"
  >
    <tbody />
  </table>
</div>
`;
